--- a/backend/tasks.json
+++ b/backend/tasks.json
@@ -1,14 +1,9 @@
 [
   {
-    "_id": "ns5go0sw7",
-    "title": "Study",
-    "description": "DSA",
-    "status": "completed"
-  },
-  {
-    "_id": "weyqci4mk",
-    "title": "dsa",
-    "description": "qfdq",
-    "status": "completed"
+    "_id": "3rn09mw28",
+    "title": "test 1",
+    "description": "test 1 desc",
+    "status": "todo",
+    "dueDate": "2024-11-19T00:00:00.000Z"
   }
 ]
